<?xml version="1.0" encoding="utf-8"?>
<merge xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android"
    tools:showIn="@layout/activity_details">

    <TextView
        android:id="@+id/back_step_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/standard_layout_margin"
        android:layout_marginBottom="@dimen/standard_layout_margin"
        android:onClick="getPreviousStep"
        android:padding="@dimen/double_view_padding"
        android:text="@string/back_button_text"
        android:textColor="@drawable/text_touch_selector"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.219"
        app:layout_constraintStart_toStartOf="parent"/>

    <TextView
        android:id="@+id/next_step_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/standard_layout_margin"
        android:layout_marginBottom="@dimen/standard_layout_margin"
        android:onClick="getNextStep"
        android:padding="@dimen/double_view_padding"
        android:text="@string/next_button_text"
        android:textStyle="bold"
        android:textColor="@drawable/text_touch_selector"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.781"
        app:layout_constraintStart_toStartOf="parent"/>

</merge>