...

        <ImageButton android:id="@id/exo_pause"
            style="@style/ExoMediaButton.Pause"
            android:contentDescription="@string/description_pause_button"/>


        <ImageButton android:id="@+id/exo_fullscreen"
            style="@style/ExoMediaButton.FastForward"
            android:src="@drawable/app_icon"
            android:contentDescription="@string/description_fullscreen_button"/>


    </LinearLayout>
...
